[package]
name = "zero_game"
version = "0.1.0"
authors = ["mplouffe <matheuplouffe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.18.0"
bindings = { path = "bindings" }
winit = "0.24.0"
raw-window-handle = "0.3.3"
rand = "0.8.3"